tests/rosetta/transpiler/Racket/execute-a-markov-algorithm.error
run error: exit status 1
list-ref: index reaches a non-pair
  index: 0
  in: '#hash(("output" . "I bought a bag of apples from my brother.") ("ruleSet" . "# This rules file is extracted from Wikipedia:\n# http://en.wikipedia.org/wiki/Markov_Algorithm\nA -> apple\nB -> bag\nS -> shop\nT -> the\nthe shop -> my brother\na never use...
  context...:
   /workspace/mochi/tests/rosetta/transpiler/Racket/execute-a-markov-algorithm.rkt:202:0
   /workspace/mochi/tests/rosetta/transpiler/Racket/execute-a-markov-algorithm.rkt:198:2
   /workspace/mochi/tests/rosetta/transpiler/Racket/execute-a-markov-algorithm.rkt:58:0
   body of "/workspace/mochi/tests/rosetta/transpiler/Racket/execute-a-markov-algorithm.rkt"
validating 5 test cases
